k8s/ingress/mixed-routing-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress-mixed-based
  namespace: ecommerce
  labels:
    app: mixed-ingress
    env: non-prod
spec:
  ingressClassName: traefik

  rules:

    - host: customer.test
      http:
        paths:
        
          - path: /api/customers
            pathType: Prefix

            backend:
              service: 
               name: customer-api-service
               port:
                number: 80

          - path: /api/customers/
            pathType: Prefix

            backend:
              service:
               name:  customer-api-service
               port:
                number: 80

    - host: inventory.test
      http:
        paths:

          - path: /api/products
            pathType: Prefix

            backend:
              service:
                name: inventory-api-service
                port:
                  number: 80
