k8s/ingress/path-based-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress-path-based
  namespace: ecommerce

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:

          - path: /api/customers
            pathType: Prefix

            backend:
              service: 
               name: customer-api-service
               port: 
                number: 80

          - path: /api/products
            pathType:  Prefix

            backend:
              service:
                name: inventory-api-service
                port:
                 number: 80
